--- a/main.ipynb
+++ b/main.ipynb
@@ -81,11 +81,14 @@
    "metadata": {},
    "source": [
     "### Key figures\n",
+    "- Proportion histogram: `figs/p_hat_hist.png`\n",
+    "- Counts histogram: `figs/nriron_hist.png`\n",
+    "- NR histogram: `figs/nr_hist.png`\n",
     "- Mixture components: `figs/mixture_components.png`\n",
     "- Age by component: `figs/age_by_component.png`\n",
     "- Sex by component: `figs/sex_by_component.png`\n",
-    "- Proportion histogram: `figs/p_hat_hist.png`\n",
-    "- Counts histogram: `figs/nriron_hist.png`\n"
+    "- Overlay mixture vs. empirical: `figs/overlay_mixture_NR3.png`\n",
+    "- Gradient function (if available): `figs/gradient_binomial.png`\n"
    ]
   }
  ],
